# krowkee

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT  LICENSE-MIT  README.md
.github/workflows/: ci-test.yml
cmake/: krowkeeConfig.cmake.in
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
docs/krowkee/: sketch.rst
docs/krowkee/sketch/: Dense.rst  Promotable.rst  Sketch.rst  Sparse.rst
docs/krowkee/transform/: CountSketch.rst  FWHT.rst  SparseJLT.rst
docs/rtd/: CMakeLists.txt  conf.py  index.rst
docs/rtd/krowkee/: sketch.rst
docs/rtd/krowkee/sketch/: Dense.rst  Sparse.rst
examples/: CMakeLists.txt  cli.cpp  merge.cpp  sparse_jlt.cpp  verbose_templates.cpp
examples/ygm/: CMakeLists.txt  merge_map.cpp  sketch_map.cpp
include/krowkee/: sketch.hpp
include/krowkee/container/: compacting_map.hpp
include/krowkee/hash/: countsketch.hpp  hash.hpp  util.hpp
include/krowkee/sketch/: Dense.hpp  Promotable.hpp  Sketch.hpp  Sparse.hpp  interface.hpp
include/krowkee/stream/: Distributed.hpp  Element.hpp  Multi.hpp  Summary.hpp  interface.hpp
include/krowkee/transform/: CountSketch.hpp  FWHT.hpp  SparseJLT.hpp
include/krowkee/transform/fwht/: utils.hpp  utils_temp.hpp
include/krowkee/util/: assert.hpp  check.hpp  cmap_types.hpp  mpitests.hpp  runtime.hpp  sketch_types.hpp  tests.hpp  ygm_tests.hpp
performance/: CMakeLists.txt  graph.cpp  histogram.cpp  init.cpp  vs_histogram.cpp
performance/include/: benchmark.hpp  graph.hpp  parameters.hpp  sampling.hpp  sketch_interface.hpp  timing.hpp  types.hpp  utils.hpp
test/: CMakeLists.txt  communicable_linearsketch_test.cpp  compacting_map_test.cpp  countsketch_hash_test.cpp  distributed_test.cpp  hash_test.cpp  linearsketch_test.cpp  multisketch_test.cpp  test_fwht_utils.cpp
test/include/: check_archive.hpp  check_ygm_archive.hpp  communicable_sketches.hpp  linearsketch_test.hpp  local_sketches.hpp  sketch_types.hpp
